@@ -1,3 +1,6 @@
+Wed 25 May 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Refactor handle()
+
 Mon 12 Jul 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Fix docker image names on CI
 	* Fix styles
